--- a/web/app/themes/beagleboard/style.css
+++ b/web/app/themes/beagleboard/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name:         Sage Starter Theme
+Theme Name:         Beagleboard
 Theme URI:          https://roots.io/sage/
-Description:        Sage is a WordPress starter theme.
+Description:        Beagleboard theme.
 Version:            11.0.1
-Author:             Roots
+Author:             David Diomede
 Author URI:         https://roots.io/
 Text Domain:        sage
 License:            MIT License
@@ -11,3 +11,5 @@ License URI:        https://opensource.org/licenses/MIT
 Requires PHP:       8.2
 Requires at least:  6.6
 */
+
+
